[gd_scene format=3 uid="uid://bxtul2pcrhsfy"]

[ext_resource type="Script" uid="uid://cyoo0pxse6vtj" path="res://level/passport/passport.gd" id="1_3ftvu"]

[node name="Passport" type="Control" unique_id=276797963]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ftvu")

[node name="Control" type="Control" parent="." unique_id=135957015]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="ColorRect" parent="Control" unique_id=1071622714]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="SignNameImg" type="ColorRect" parent="Control" unique_id=517317257]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -110.0
offset_right = -36.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.22670749, 0.22670749, 0.22670746, 1)

[node name="SignName" type="Button" parent="Control" unique_id=1295965097]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -102.0
offset_right = -58.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 0
text = "签名"

[node name="Photo" type="TextureRect" parent="Control" unique_id=331333691]
layout_mode = 0
offset_left = 80.0
offset_top = 66.0
offset_right = 120.0
offset_bottom = 106.0

[node name="ChangeTimer" type="Timer" parent="." unique_id=382653799]

[connection signal="pressed" from="Control/SignName" to="." method="_on_sign_name_pressed"]
[connection signal="timeout" from="ChangeTimer" to="." method="_on_change_timer_timeout"]
